# biz/internal/service/mcpserver/assembler.go
@@ -12,14 +12,16 @@ func EntityToMCPServerListRespData(entity *domain.MCPServerEntity) *mcpserver.Ge
 		return nil
 	}
 	return &mcpserver.GetMCPServerListRespData{
-		ID:          entity.ID,
-		Name:        entity.Name,
-		Description: entity.Description,
-		URL:         entity.Url,
-		IsPublic:    entity.IsPublic,
-		OpenProxy:   entity.OpenProxy,
-		CreatedAt:   entity.CreatedAt.Format(time.RFC3339),
-		UpdatedAt:   entity.UpdatedAt.Format(time.RFC3339),
+		ID:              entity.ID,
+		Name:            entity.Name,
+		Description:     entity.Description,
+		URL:             entity.Url,
+		IsPublic:        entity.IsPublic,
+		OpenProxy:       entity.OpenProxy,
+		CreatedAt:       entity.CreatedAt.Format(time.RFC3339),
+		UpdatedAt:       entity.UpdatedAt.Format(time.RFC3339),
+		CreatorId:       entity.CreatorID,
+		CreatorNickname: entity.Creator.Nickname,
 	}
 }
 
@@ -37,15 +39,17 @@ func EntityToMCPServerRespData(entity *domain.MCPServerEntity) *mcpserver.GetMCP
 	}
 
 	return &mcpserver.GetMCPServerRespData{
-		ID:          entity.ID,
-		Name:        entity.Name,
-		Description: entity.Description,
-		URL:         entity.Url,
-		IsPublic:    entity.IsPublic,
-		OpenProxy:   entity.OpenProxy,
-		Token:       tokens,
-		CreatedAt:   entity.CreatedAt.Format(time.RFC3339),
-		UpdatedAt:   entity.UpdatedAt.Format(time.RFC3339),
+		ID:              entity.ID,
+		Name:            entity.Name,
+		Description:     entity.Description,
+		URL:             entity.Url,
+		IsPublic:        entity.IsPublic,
+		OpenProxy:       entity.OpenProxy,
+		Token:           tokens,
+		CreatedAt:       entity.CreatedAt.Format(time.RFC3339),
+		UpdatedAt:       entity.UpdatedAt.Format(time.RFC3339),
+		CreatorId:       entity.CreatorID,
+		CreatorNickname: entity.Creator.Nickname,
 	}
 }
 
