# docs/swagger/swagger.yaml
@@ -120,6 +120,12 @@ definitions:
       createdAt:
         description: 创建时间
         type: string
+      creatorId:
+        description: 创建者ID
+        type: integer
+      creatorNickname:
+        description: 创建者nickname
+        type: string
       description:
         description: 描述
         type: string
@@ -160,6 +166,12 @@ definitions:
       createdAt:
         description: 创建时间
         type: string
+      creatorId:
+        description: 创建者ID
+        type: integer
+      creatorNickname:
+        description: 创建者nickname
+        type: string
       description:
         description: 描述
         type: string
@@ -176,7 +188,7 @@ definitions:
         description: 是否开启代理
         type: boolean
       token:
-        description: Token列表
+        description: Token列表,仅创建者可见
         items:
           $ref: '#/definitions/mcpserver.TokenData'
         type: array
